--- a/package.json
+++ b/package.json
@@ -11,23 +11,26 @@
     "lintf": "eslint . --fix"
   },
   "dependencies": {
-    "vue": "^3.4.21"
+    "diff": "^5.2.0",
+    "vue": "^3.4.30"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.7.0",
+    "@antfu/eslint-config": "^2.21.1",
     "@orilight/vue-settings": "^1.2.2",
-    "@types/node": "^20.11.24",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "autoprefixer": "^10.4.18",
+    "@shikijs/transformers": "^1.9.0",
+    "@types/diff": "^5.2.1",
+    "@types/node": "^20.14.8",
+    "@vitejs/plugin-vue": "^5.0.5",
+    "autoprefixer": "^10.4.19",
     "dayjs": "^1.11.11",
     "eslint": "^8.57.0",
-    "eslint-plugin-tailwindcss": "^3.14.3",
-    "postcss": "^8.4.35",
-    "shiki": "^1.6.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
-    "unplugin-auto-import": "^0.17.5",
-    "vite": "^5.1.4",
-    "vue-tsc": "^2.0.4"
+    "eslint-plugin-tailwindcss": "^3.17.4",
+    "postcss": "^8.4.38",
+    "shiki": "^1.9.0",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.2",
+    "unplugin-auto-import": "^0.17.6",
+    "vite": "^5.3.1",
+    "vue-tsc": "^2.0.22"
   }
 }
