feat: api deprecated tag

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,5 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
   },
-  "editor.formatOnSave": false,
-  "eslint.experimental.useFlatConfig": true
+  "editor.formatOnSave": false
 }
