--- a/package.json
+++ b/package.json
@@ -12,25 +12,26 @@
   },
   "dependencies": {
     "@orilight/vue-settings": "^1.2.2",
-    "@shikijs/transformers": "^1.18.0",
+    "@shikijs/transformers": "^1.21.0",
     "dayjs": "^1.11.13",
     "diff": "^7.0.0",
-    "shiki": "^1.18.0",
-    "vue": "^3.5.8"
+    "shiki": "^1.21.0",
+    "vue": "^3.5.10"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.7.1",
+    "@antfu/eslint-config": "^3.7.3",
     "@types/diff": "^5.2.2",
-    "@types/node": "^20.16.3",
+    "@types/node": "^20.16.10",
     "@vitejs/plugin-vue": "^5.1.4",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.11.0",
+    "eslint": "^9.11.1",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "postcss": "^8.4.47",
+    "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2",
     "unplugin-auto-import": "^0.18.3",
-    "vite": "^5.4.7",
+    "vite": "^5.4.8",
     "vue-tsc": "^2.1.6"
   }
 }
