--- a/package.json
+++ b/package.json
@@ -5,32 +5,31 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
     "lint": "eslint .",
     "lintf": "eslint . --fix"
   },
   "dependencies": {
     "@orilight/vue-settings": "^1.2.2",
-    "@shikijs/transformers": "^1.21.0",
+    "@shikijs/transformers": "^3.3.0",
     "dayjs": "^1.11.13",
     "diff": "^7.0.0",
-    "shiki": "^1.21.0",
-    "vue": "^3.5.10"
+    "shiki": "^3.3.0",
+    "vue": "^3.5.13"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.7.3",
-    "@types/diff": "^5.2.2",
-    "@types/node": "^20.16.10",
-    "@vitejs/plugin-vue": "^5.1.4",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.11.1",
-    "eslint-plugin-tailwindcss": "^3.17.4",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13",
-    "typescript": "^5.6.2",
-    "unplugin-auto-import": "^0.18.3",
-    "vite": "^5.4.8",
-    "vue-tsc": "^2.1.6"
+    "@antfu/eslint-config": "^4.12.0",
+    "@tailwindcss/vite": "^4.1.4",
+    "@types/diff": "^7.0.2",
+    "@types/node": "^22.14.1",
+    "@vitejs/plugin-vue": "^5.2.3",
+    "@vue/tsconfig": "^0.7.0",
+    "eslint": "^9.25.1",
+    "tailwindcss": "^4.1.4",
+    "typescript": "^5.8.3",
+    "unplugin-auto-import": "^19.1.2",
+    "vite": "^6.3.2",
+    "vue-tsc": "^2.2.8"
   }
 }
